--- a/salado.Rmd
+++ b/salado.Rmd
@@ -169,7 +169,8 @@ ggplot() +
   coord_sf(xlim = c(min(bbx[1,]), max(bbx[1,])), 
            ylim = c(min(bbx[2,]), max(bbx[2,])),
            expand = FALSE) +
-  theme(legend.position = F) + theme_void()+
+  theme(legend.position = F) + 
+  theme_void()+
   theme(panel.background=
           element_rect(fill = "lightskyblue2"))
 
@@ -183,7 +184,7 @@ get_locations <- function(f){
   loc <- cbind(tlObj$location,tlObj$duration)
   tt <- as.numeric(loc$startTimestampMs)/1000
   loc$time<-as.POSIXct(tt,origin = "1970-01-01")
-  #conver longitude & latitude from E7 to GPS 
+  #cover longitude & latitude from E7 to GPS 
   loc$lat = loc$latitudeE7 / 1e7
   loc$lon = loc$longitudeE7 / 1e7
   loc <- data.table(loc)
@@ -225,7 +226,7 @@ routes <- do.call(rbind, lapply(dates), daily_routes)
 final_map <- ggplot() + 
   geom_sf(data=counties_TX,
           inherit.aes= FALSE,
-          lwd=0.0,fill= "white")+
+          lwd=0.0,fill= "#fff8f0")+
   geom_sf(data = streets$osm_lines,
           inherit.aes = FALSE,
           color=color_roads,
@@ -241,20 +242,21 @@ final_map <- ggplot() +
   coord_sf(xlim = c(min(bbx[1,]), max(bbx[1,])), 
            ylim = c(min(bbx[2,]), max(bbx[2,])),
            expand = FALSE) +
-  theme(legend.position = F) + theme_void()+
+  theme(legend.position = F) + 
+  theme_void() +
   theme(panel.background=
-          element_rect(fill=rgb(0.92,0.679,0.105)))
+          element_rect(fill="lightcyan3"))
 final_map
 
 # save when the time comes
 
-# ggsave(final_map, 
-#        filename = "my_personal_map_art.png",
-#        scale = 1, 
-#        width = 36, 
-#        height = 24, 
-#        units = "in",
-#        dpi = 500)
+ggsave(final_map,
+       filename = "salado_map_art.png",
+       scale = 1,
+       width = 36,
+       height = 24,
+       units = "in",
+       dpi = 500)
 
 ```
 
